[BUGFIX] Visible notification if cropping has changed
For all formfields there is a visible notification (blue border)
for when value has been changed. This is now also visible for 
the preview image if the cropping has been changed.

Resolves: #66442
Releases: master
Reviewed-on: http://review.typo3.org/38716
Tested-by: Frans Saris <franssaris@gmail.com>
Tested-by: Andreas Fernandez <andreas.fernandez@aspedia.de>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_main_form.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_main_form.less
@@ -35,6 +35,10 @@ span.typo3-moduleHeader img {
 //
 .has-change {
 	.form-control-validation(@state-info-text; @state-info-text; @state-info-bg);
+
+	.thumbnail-status {
+		border: 1px solid @state-info-text;
+	}
 }
 
 //
